--- a/BootstrapWeek1/conFusion/index.html
+++ b/BootstrapWeek1/conFusion/index.html
@@ -75,6 +75,80 @@
         </div>
     </div>
 
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table</h4>
+                    <button type="button" class="close" data-dismiss="modal">
+                        &times;
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group row">
+                            <label for="numberofguests" class="col-sm-4 col-form-label">Number of Guests</label>
+                            <div class="col-sm-8 align-self-center">
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="numberofguests" id="guest1">
+                                    <label class="form-check-label" for="guest1">1</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="numberofguests" id="guest2" checked>
+                                    <label class="form-check-label" for="guest2">2</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="numberofguests" id="guest3">
+                                    <label class="form-check-label" for="guest3">3</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="numberofguests" id="guest4">
+                                    <label class="form-check-label" for="guest4">4</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="numberofguests" id="guest5">
+                                    <label class="form-check-label" for="guest5">5</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="numberofguests" id="guest6">
+                                    <label class="form-check-label" for="guest6">6</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="smokingsection" class="col-sm-4 col-form-label">Section</label>
+                            <div class="col-sm-8 align-self-center">
+                                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                    <label class="btn btn-success active">
+                                        <input type="radio" name="nonsmoking" id="section1" autocomplete="off" checked> Non-Smoking
+                                    </label>
+                                    <label class="btn btn-danger">
+                                        <input type="radio" name="smoking" id="section2" autocomplete="off"> Smoking
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="dateandtime" class="col-sm-3 col-form-label">Date and Time</label>
+                            <div class="col-sm-4">
+                                <input type="date" class="form-control" id="date" name="date" placeholder="Date">
+                            </div>
+                            <div class="col-sm-4">
+                                <input type="datetime" class="form-control" id="time" name="time" placeholder="Time">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="offset-sm-3 col-sm-9">
+                                <button type="button" class="btn btn-secondary ml-auto" data-dismiss="modal">Cancel</button>
+                                <button type="submit" class="btn btn-primary">Reserve</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -86,9 +160,8 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center text-center">
-                    <a href="#reservecard" role="button" class="btn nav-link btn-info btn-sm btn-block"
-                        data-toggle="tooltip" data-html="true" title="or call us at <br><strong>+852 1234567</strong>"
-                        data-placement="bottom">Reserve Table</a>
+                    <a data-toggle="modal" role="button" class="btn nav-link btn-dark btn-sm btn-block"
+                        data-target="#reserveModal">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -193,61 +266,6 @@
         </div>
     </div>
 
-    <div class="row row-content align-items-center">
-        <div class="col-12 col-sm-8 offset-sm-2">
-            <div class="card" id="reservecard">
-                <h3 class="card-header bg-primary text-white">Reserve a Table</h3>
-                <div class="card-body">
-                    <form>
-                        <div class="form-group row">
-                            <label for="numberofguests" class="col-sm-4 col-form-label">Number of Guests</label>
-                            <div class="col-sm-8 align-self-center">
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="numberofguests" id="guest1">
-                                    <label class="form-check-label" for="guest1">1</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="numberofguests" id="guest2" checked>
-                                    <label class="form-check-label" for="guest2">2</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="numberofguests" id="guest3">
-                                    <label class="form-check-label" for="guest3">3</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="numberofguests" id="guest4">
-                                    <label class="form-check-label" for="guest4">4</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="numberofguests" id="guest5">
-                                    <label class="form-check-label" for="guest5">5</label>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <input class="form-check-input" type="radio" name="numberofguests" id="guest6">
-                                    <label class="form-check-label" for="guest6">6</label>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <label for="dateandtime" class="col-sm-3 col-form-label">Date and Time</label>
-                            <div class="col-sm-4">
-                                <input type="date" class="form-control" id="date" name="date" placeholder="Date">
-                            </div>
-                            <div class="col-sm-4">
-                                <input type="datetime" class="form-control" id="time" name="time" placeholder="Time">
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <div class="offset-sm-3 col-sm-9">
-                                <button type="submit" class="btn btn-primary">Reserve</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <footer class="footer">
         <div class="container">
             <div class="row">             
@@ -293,11 +311,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
+
 </body>
 
 </html>
